--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  socket_io_client: ^2.0.3+1
+  #socket_io_client: ^2.0.3+1
+  web_socket_channel: ^2.3.0
 
 
 dev_dependencies:
