--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   #socket_io_client: ^2.0.3+1
   web_socket_channel: ^2.3.0
+  dio: ^4.0.6
+  provider: ^6.0.0
 
 
 dev_dependencies:
